# authorizer

./: .env  .gitignore  Makefile  README.md  alembic.ini  docker-compose.local-db.yml  docker-compose.yml  pyproject.toml
.circleci/: config.yml
app/: config.py  conftest.py  main.py
app/adapter/into/cli/: main.py
app/adapter/into/cli/commands/: generate_service_token.py
app/adapter/into/fastapi/: app.py  exception.py  lambda.py  main.py  users.py
app/adapter/into/lambda/: authorizer.py  db_command.py  service_token.py
app/infrastructure/: auth.py  users.py
app/infrastructure/db/: auth.py  base.py  deps.py  models.py  user.py  utils.py
app/infrastructure/db/models/: __init__.py  base.py  users.py
app/ports/: email.py  user.py  users.py
app/tests/functional/: test_auth_api.py  test_auth_lambda.py
app/use_case/: auth_token.py
infra/: Makefile
infra/docker/: authorizer.dockerfile
infra/tf/: main.tf  output.tf  variables.tf
infra/tf/modules/api/aws/: main.tf
infra/tf_bastion/: bastion_init.sh  main.tf  output.tf  variables.tf
infra/tf_bastion/scripts/: bastion_db_tunnel.sh  bastion_init_template.sh  bastion_ssh.sh  generate_bastion_init.sh
infra/tf_pipeline/: main.tf  variables.tf
infra/tf_pipeline/modules/images/aws/: main.tf  output.tf
migrations/: env.py
migrations/versions/: 45b19e853308_db_migration.py  48fad9e7af82_initial_migration.py  4bdd014eabee_db_migration.py  61ceebc1a2eb_adding_created_at_and_updated_to_db_.py  af009be43d12_db_migration.py  be280c9093d8_db_migration.py
scripts/: lint.sh  migrate_db.sh  push.sh
