[tool.poetry]
name = "athourizer"
version = "0.1.0"
description = ""
authors = ["Noel Wilson <jwnwilson@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.20.24"
fastapi = "^0.71.0"
uvicorn = "^0.16.0"
mangum = "^0.12.3"
pycryptodome = "^3.12.0"
passlib = "^1.7.4"
python-jose = {extras = ["pycryptodome"], version = "^3.3.0"}
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.770"
black = "^21.12b0"
isort = "^5.10.1"
boto3-stubs = "^1.20.24"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
