[tool.poetry]
name = "authorizer"
version = "0.1.0"
description = ""
authors = ["Noel Wilson <jwnwilson@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.71.0"
fastapi-users = {extras = ["sqlalchemy2"], version = "^9.2.2"}
uvicorn = {extras = ["standard"], version = "^0.17.0"}
aiosqlite = "^0.17.0"
alembic = "^1.7.5"
fastapi-users-db-sqlalchemy = "^2.0.4"
httpx-oauth = "^0.4.1"
asyncpg = "^0.25.0"
psycopg2-binary = "^2.9.3"
mangum = "^0.12.3"
requests = "^2.27.1"
hex-lib = {version = "^0.1.0", source = "hex-lib"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.12b0"
isort = "^5.10.1"
boto3-stubs = "^1.20.24"
mypy = "^0.931"
pytest-asyncio = "^0.17.2"
aiosqlite = "^0.17.0"
types-requests = "^2.27.18"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[[tool.poetry.source]]
name = "hex-lib"
url = "https://hex-lib-675468650888.d.codeartifact.eu-west-1.amazonaws.com/pypi/hex-lib/simple/"
secondary = true